--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clipboard-copy": "^4.0.1",
+    "crypto-browserify": "^3.12.0",
+    "filesize": "^10.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
@@ -16,6 +18,7 @@
     "react-recaptcha-google": "^1.1.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
