--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-ga4": "^2.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-loading": "^2.0.3",
     "react-notifications": "^1.7.4",
