--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ZERO_TWO_API = "https://api.zerotwo.in"
-reCAPTCHA_SITE_KEY = '6Ld7Y4omAAAAAKhWv9p6tsp8-X_cA02FVADpR5JZ'
-reCAPTCHA_SECRET_KEY = '6Ld7Y4omAAAAAArR_q6TOmTjgOxQm8x5VC49OdfW'
+ZERO_TWO_API = "https://api.backend.in"  // contact me for backendcode
+reCAPTCHA_SITE_KEY = '6Ld7Y4omAAAAAKhWv9p6tsp8-sorry-cant expose'
+reCAPTCHA_SECRET_KEY = '6Ld7Y4omAAAuseyourown secret'
